# berrycorepy

./: README.md  main.py  pyproject.toml  requirements.txt
berrycorepy/: __meta__.py  exceptions.py  loggers.py
berrycorepy/client/: client.py  context_controller.py  dangerous.py
berrycorepy/client/session/: BaseSession.py  aiohttp.py
berrycorepy/client/session/middlewares/: base.py  manager.py  request_logging.py
berrycorepy/methods/: __init__.py  base.py  get_me.py  get_user.py
berrycorepy/types/: GameProfile.py  NewProfileRequest.py  SimpleMarket.py  User.py  UserTime.py  base.py  input_file.py  response_parameters.py
